--- a/app/src/main/res/layout/activity_detail_course.xml
+++ b/app/src/main/res/layout/activity_detail_course.xml
@@ -4,16 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailCourse"
+    tools:context=".activity.DetailCourse"
     android:padding="10dp"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/ic_back" />
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         tools:src="@drawable/java"/>
 
     <TextView
@@ -39,7 +46,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_course_detail"
         android:padding="10dp"
         android:layout_marginTop="20dp">
 
@@ -82,18 +88,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="5dp"
             android:layout_alignParentRight="true"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
-            tools:text="40 jam"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            tools:text="40 jam" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="60dp"
-            android:layout_marginTop="15dp"
-            android:layout_below="@id/biaya">
+            android:layout_above="@+id/btn_daftar"
+            android:layout_below="@id/biaya"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -103,9 +110,9 @@
                 <TextView
                     android:id="@+id/tv_deskripsi"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:padding="15dp"
+                    android:layout_marginTop="10dp"
                     android:textSize="16sp"
                     tools:text="Bahasa Java merupakan sebuah bahasa pemrograman yang legendaris. Hampir semua mahasiswa IT pernah belajar dan membuat program menggunakan bahasa Java. Jika di kampus terdapat mata kuliah pemrograman berbasis object (PBO), atau dalam bahasa inggris disebut sebagai object oriented programming (OOP), kemungkinan besar yang akan dipakai sebagai bahan praktek adalah bahasa Java." />
 
@@ -120,8 +127,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="#4654A3"
-            android:textColor="#FFF"
-            android:text="@string/btn_detail"/>
+            android:text="@string/btn_detail"
+            android:textColor="#FFF" />
     </RelativeLayout>
 
 
