--- a/app/src/main/res/layout/item_recycle_view.xml
+++ b/app/src/main/res/layout/item_recycle_view.xml
@@ -4,18 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity"
+    tools:context=".activity.MainActivity"
     android:padding="10dp"
-    android:background="#270949"
     android:gravity="center">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardCourse"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        app:cardCornerRadius="20dp">
+        android:elevation="14dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,8 +24,13 @@
                 android:id="@+id/iv_main"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_margin="15dp"
-                tools:src = "@drawable/java"/>
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                tools:src="@drawable/java" />
 
             <TextView
                 android:id="@+id/tv_nameHero"
